砍掉四个功能方块，注释取消大量代码